[project]
name = "crew_content_creation"
version = "0.1.0"
description = "crew_content_creation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "litellm>=1.75.3",
]

[project.scripts]
crew_content_creation = "crew_content_creation.main:run"
run_crew = "crew_content_creation.main:run"
train = "crew_content_creation.main:train"
replay = "crew_content_creation.main:replay"
test = "crew_content_creation.main:test"
run_with_trigger = "crew_content_creation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
